--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@sanity/client": "^6.27.1",
     "@sanity/image-url": "^1.1.0",
+    "@sanity/vision": "^3.71.2",
     "next": "15.1.6",
     "next-sanity": "^9.8.43",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "sanity": "^3.71.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
