--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@sanity/client": "^6.27.1",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.71.2",
+    "chromadb": "^1.10.4",
     "dotenv": "^16.4.7",
+    "llamaindex": "^0.8.31",
     "next": "15.1.6",
     "next-sanity": "^9.8.43",
     "react": "^19.0.0",
